--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/4/n9921539.md#1" target="_blank">尹曙生：产粮大省为何饿死人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/5/28/n4165491.md#1" target="_blank">生命在 信仰在</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/24/n10997801.md#1" target="_blank">林辉：国军重庆号巡洋舰官兵投共后的苦难</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2095376.md#1" target="_blank">法轮功中南海事件真相揭秘</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
